After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 710796 - Minor memory leak fix
Minor memory leak fix
Status: RESOLVED FIXED
Product: grilo
Classification: Other
Component: plugins
git master
Other All
: Normal normal
: ---
Assigned To: grilo-maint
grilo-maint
Depends on:
Blocks:
 
 
Reported: 2013-10-24 12:30 UTC by Philip Withnall
Modified: 2013-10-29 18:00 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
filesystem: Fix a potential memory leak in an error handling path (1.43 KB, patch)
2013-10-24 12:32 UTC, Philip Withnall
committed Details | Review

Description Philip Withnall 2013-10-24 12:30:30 UTC
Patch coming up to fix a small memory leak in an error handling path in the filesystem plugin.
Comment 1 Philip Withnall 2013-10-24 12:32:10 UTC
Created attachment 258013 [details] [review]
filesystem: Fix a potential memory leak in an error handling path

It’s possible to leave the loop in this function before visiting every
element in idle_data->entries, thus leaking the data in the remaining
elements. Tidy up the deallocation strategy to avoid the leak.
Comment 2 Juan A. Suarez Romero 2013-10-29 18:00:54 UTC
commit b3e134b23566356d4d92ad7d613a3708751356e2
Author: Philip Withnall <philip.withnall@collabora.co.uk>
Date:   Thu Oct 24 13:30:48 2013 +0100

    filesystem: Fix a potential memory leak in an error handling path
    
    It is possible to leave the loop in this function before visiting every
    element in idle_data->entries, thus leaking the data in the remaining
    elements. Tidy up the deallocation strategy to avoid the leak.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=710796

 src/filesystem/grl-filesystem.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)